--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         python -m flake8
         # перейти в папку, содержащую manage.py — 
         #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        cd infra_project/
+        cd yamdb_final/
         # запустить написанные разработчиком тесты
         python manage.py test
   deploy:
@@ -44,10 +44,10 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
           # Выполняет pull образа с DockerHub
-          sudo docker pull dipperpain/infra_actions
+          sudo docker pull dipperpain/yamdb_final
           #остановка всех контейнеров
           sudo docker stop 
-          sudo docker run --rm -d -p 5000:5000 dipperpain/infra_actions
+          sudo docker run --rm -d -p 5000:5000 dipperpain/yamdb_final
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
