--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     env_file:
       - ./.env
   web:
-    build: ../yamdb_final
+    image: dipperpain/yamdb_final:latest
     restart: always
     volumes:
       # Контейнер web будет работать с данными, хранящиеся в томе static_value, 
