--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -20,15 +20,15 @@ jobs:
         # установка flake8 и его плагинов
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         # установка зависимостей
+        
         pip install -r requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
         # запуск проверки проекта по flake8
         python -m flake8
-        # перейти в папку, содержащую manage.py — 
-        #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        cd yamdb_final/
+        pytest
+        
         # запустить написанные разработчиком тесты
         python manage.py test
   deploy:
@@ -48,16 +48,7 @@ jobs:
           #остановка всех контейнеров
           sudo docker stop 
           sudo docker run --rm -d -p 5000:5000 dipperpain/yamdb_final
-  send_message:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - name: send message
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!
+  
 #####################
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -83,3 +74,13 @@ jobs:
           push: true
           tags: dipperpain/yamdb_final:latest
 
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: ${{ github.workflow }} успешно выполнен!
