--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -46,7 +46,7 @@ jobs:
           # Выполняет pull образа с DockerHub
           sudo docker pull dipperpain/yamdb_final
           #остановка всех контейнеров
-          sudo docker stop 
+          sudo docker stop $(sudo docker ps -a -q)
           sudo docker run --rm -d -p 5000:5000 dipperpain/yamdb_final
   
 #####################
